# bazel-differ

./: BUILD.bazel
.github/workflows/: bazel-ci.yaml  release.yml
