# gazelle:prefix github.com/ewhauser/bazel-differ
# gazelle:exclude sql
load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

gazelle(
    name = "gazelle",
)

# gazelle_ci is called from CI to verify the repo is up-to-date
gazelle(
    name = "gazelle_ci",
    command = "fix",
    extra_args = ["--mode=diff"],
)

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

sh_binary(
    name = "buildifier",
    srcs = select(
        {
            "@bazel_tools//src/conditions:darwin": ["@buildifier_osx//file"],
            "@bazel_tools//src/conditions:linux": ["@buildifier//file"],
        },
        no_match_error = "Buildifier does not have a binary for your platform",
    ),
)

sh_binary(
    name = "buildozer",
    srcs = select(
        {
            "@bazel_tools//src/conditions:darwin": ["@buildozer_osx//file"],
            "@bazel_tools//src/conditions:linux": ["@buildozer//file"],
        },
        no_match_error = "Buildozer does not have a binary for your platform",
    ),
)

go_binary(
    name = "bazel-differ",
    embed = [":cli_lib"],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "bazel-differ-linux-amd64",
    embed = [":cli_lib"],
    goarch = "amd64",
    goos = "linux",
    pure = "on",
    static = "on",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "bazel-differ-linux-arm64",
    embed = [":cli_lib"],
    goarch = "arm64",
    goos = "linux",
    pure = "on",
    static = "on",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "bazel-differ-darwin-amd64",
    embed = [":cli_lib"],
    goarch = "amd64",
    goos = "darwin",
    pure = "on",
    static = "on",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "bazel-differ-darwin-arm64",
    embed = [":cli_lib"],
    goarch = "arm64",
    goos = "darwin",
    pure = "on",
    static = "on",
    visibility = ["//visibility:public"],
)

go_library(
    name = "cli_lib",
    srcs = ["main.go"],
    importpath = "github.com/ewhauser/bazel-differ/cli",
    visibility = ["//visibility:private"],
    deps = ["//cmd"],
)
